--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>History of India and Pakistan</title> 
 </head>
+ <h1>History of India And Pakistan </h1>
 <body>
 <p>Since the partition of British India in 1947 and subsequent creation of the dominions of India and Pakistan, the two countries have been involved in a number of wars, conflicts, and military standoffs. A long-running dispute over Kashmir and cross-border terrorism have been the predominant cause of conflict between the two states, with the exception of the Indo-Pakistani War of 1971, which occurred as a direct result of hostilities stemming from the Bangladesh Liberation War in erstwhile East Pakistan (now Bangladesh).
 
@@ -374,4 +375,5 @@ This page was last edited on 6 October 2025, at 19:03 (UTC).
 Text is available under the Creative Commons Attribution-ShareAlike 4.0 License; additional terms may apply. By using this site, you agree to the Terms of Use and Privacy Policy. Wikipedia® is a registered trademark of the Wikimedia Foundation, Inc., a non-profit organization.
 </body>
 </html>
+
 
